add functionality for character counter

--- a/public/styles/new_tweet.css
+++ b/public/styles/new_tweet.css
@@ -8,7 +8,12 @@ input {
   font-family: 'Bungee',
     cursive;
 }
-
+.counter.red {
+  color: red;
+}
+.counter.grey {
+  color: #545149;
+}
 textarea {
   background: transparent;
   border: none;
