init styling for tweets

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,4 +1,4 @@
-header {
+header.profile {
   margin-top: 120px;
   /* Add a top margin to avoid content overlay */
   background-color: #d19600;
@@ -8,10 +8,10 @@ header {
   flex-direction: column;
 }
 
-img {
+header.profile img {
   padding-top: 5px;
 }
 
-h2 {
+header.profile h2 {
   margin-block-start: 0;
 }
