add retweet, like, flag icons with font-awesome

--- a/public/styles/new_tweet.css
+++ b/public/styles/new_tweet.css
@@ -11,7 +11,7 @@ input {
 textarea {
   background: transparent;
   border: none;
-  border-bottom: 4px solid black;
+  border-bottom: 4px solid #545149;
   width: 100%;
 }
 
