--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -1,7 +1,7 @@
 article.tweet header {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-between
 
 }
 
@@ -9,14 +9,27 @@ article.tweet footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  border-top: 4px solid black;
+  border-top: 4px solid #545149;
 }
 
 article {
   margin-top: 40px;
+  margin-bottom: 40px;
   padding: 10px;
-  border: 4px solid black;
+  border: 4px solid #545149;
 }
 article p {
   padding-left: 10px;
+}
+
+#username {
+  color:transparent;
+}
+
+article:hover #username {
+  color: #C5CBE3;
+}
+article:hover {
+  box-shadow: 5px 5px 5px #888;
+
 }
