--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -1,7 +1,19 @@
+article {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  padding: 25px;
+  border: 4px solid #545149;
+  opacity: 0.80;
+}
+
+article.tweet > * {
+  padding-left: 20px;
+}
+
 article.tweet header {
   display: flex;
   flex-direction: row;
-  justify-content: space-between
+  justify-content: space-between;
 
 }
 
@@ -10,26 +22,54 @@ article.tweet footer {
   flex-direction: row;
   justify-content: space-between;
   border-top: 4px solid #545149;
-}
-
-article {
-  margin-top: 40px;
-  margin-bottom: 40px;
-  padding: 10px;
-  border: 4px solid #545149;
-}
-article p {
-  padding-left: 10px;
+  font-family: 'Source Sans Pro',
+  sans-serif;
+  font-weight: 300;
 }
 
 #username {
+  font-family: 'Source Sans Pro',
+  sans-serif;
+  font-weight: 300;
   color:transparent;
+  text-align: right;
+  order: 3;
+  flex-grow: 3;
+}
+
+#img{
+  margin: auto;
+  height: 75px;
+  width: 75px;
+  order: 1;
+  flex-grow: 0;
+}
+
+#name{
+  font-family: 'Source Sans Pro',
+  sans-serif;
+  font-weight: 300;
+  margin: auto;
+  order:1;
+  flex-grow: 1
+}
+
+#tweettext {
+  font-family: 'Source Sans Pro',
+  sans-serif;
+  font-weight: 400;
 }
 
 article:hover #username {
   color: #C5CBE3;
 }
 article:hover {
-  box-shadow: 5px 5px 5px #888;
+  box-shadow: 5px 5px 0 #C5CBE3;
+  opacity: 1;
+}
 
+
+
+article i {
+  color: #4056A1;
 }
