add arrow icon and moves down when hovered

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -18,3 +18,15 @@ nav {
   font-family: 'Bungee', cursive;
 
 }
+#newTweet {
+  display: flex;
+  flex-flow: column;
+}
+#arrowDown {
+  color: orange;
+  padding-left: 50%;
+}
+
+#newTweet:hover #arrowDown{
+  transform: translateY(10px);
+}
