add functionality for button to scroll to top and cleaned up code

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -14,11 +14,12 @@ nav {
 
 }
 
+
 #logo {
   font-family: 'Bungee', cursive;
 
 }
-#newTweet {
+#writeTweet {
   display: flex;
   flex-flow: column;
 }
@@ -27,6 +28,6 @@ nav {
   padding-left: 50%;
 }
 
-#newTweet:hover #arrowDown{
+#writeTweet:hover #arrowDown{
   transform: translateY(10px);
 }
