--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -42,3 +42,18 @@ body > main {
 main > * {
   width: 90%;
 }
+
+#fixedButton {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: red;
+  color: white;
+}
+
+.hidden {
+  display: none
+}
