--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,16 +1,42 @@
-header.profile {
-  margin-top: 120px;
-  background-color: #d19600;
-  background-image: url("../images/asfalt-dark.png");
-  align-items: center;
-  display: flex;
-  flex-direction: column;
+@media only screen and (max-width: 1023px) {
+
+  header.profile {
+    margin-top: 120px;
+    background-color: #d19600;
+    background-image: url("../images/asfalt-dark.png");
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  header.profile img {
+    padding-top: 20px;
+  }
+
+  header.profile h2 {
+    margin-block-start: 0;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  header.profile {
+    margin-top: 35px;
+    background-color: #d19600;
+    background-image: url("../images/asfalt-dark.png");
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    height: 25%;
+    margin-right:75px;
+  }
+
+  header.profile img {
+    padding-top: 20px;
+  }
+
+  header.profile h2 {
+    margin-block-start: 0;
+  }
 }
 
-header.profile img {
-  padding-top: 20px;
-}
 
-header.profile h2 {
-  margin-block-start: 0;
-}
