--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -35,7 +35,6 @@ body {
 
  /* mobile CSS */
 @media only screen and (max-width: 1023px) {
-
   body > main {
     display: flex;
     align-items: center;
@@ -57,6 +56,8 @@ body {
     color: white;
   }
 }
+
+
 /*Desktop CSS*/
 @media only screen and (min-width: 1024px) {
   body {
@@ -73,13 +74,15 @@ body {
   }
 
   header.profile {
-    flex-grow: 1;
+    flex-grow: 0;
     padding-right: 10px;
   }
 
   main {
+    flex-grow: 1;
     margin: auto;
-    flex-grow: 1
+    overflow : hidden;
+    max-width: 60%;
   }
 
 
