--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,49 +1,35 @@
-@media only screen and (max-width: 1023px) {
+/* Default CSS*/
+header.profile {
+  background-image: url("../images/asfalt-dark.png");
+  background-color: #d19600;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+header.profile img {
+  padding-top: 20px;
+}
 
+header.profile h2 {
+  color: white;
+  margin-block-start: 0;
+  font-weight: 300;
+
+}
+
+/*mobile specific css*/
+@media only screen and (max-width: 1023px) {
   header.profile {
     margin-top: 120px;
-    background-color: #d19600;
-    background-image: url("../images/asfalt-dark.png");
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-  }
-
-  header.profile img {
-    padding-top: 20px;
-  }
-
-  header.profile h2 {
-    color: white;
-    margin-block-start: 0;
-    font-weight: 300;
-
+    
   }
 }
+/*desktop specific css*/
 @media only screen and (min-width: 1024px) {
   header.profile {
     margin-top: 35px;
-    background-color: #d19600;
-    background-image: url("../images/asfalt-dark.png");
-    align-items: center;
-    display: flex;
-    flex-direction: column;
     height: 20%;
     width: 30%;
-    margin-right:10%;
-  }
-
-  header.profile img {
- 
-    padding-top: 20px;
-  }
-
-
-  header.profile h2 {
-    color: white;
-    margin-block-start: 0;
-    font-weight: 300;
+    margin-right: 10%;
   }
 }
-
-
