--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -44,6 +44,9 @@ body {
   background-color: red;
   color: white;
 }
+.hidden {
+  display:none;
+}
 
 /* mobile CSS */
 @media only screen and (max-width: 1023px) {
