--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,8 +1,17 @@
 /* Default CSS*/
-#writeTweet:hover #arrowDown {
-  transform: translateY(10px);
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
+  }
+
+  100% {
+    transform: translateY(-7px);
+  }
 }
 #arrowDown {
+  animation: bounce 0.8s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
   color: red;
   padding-left: 49%;
 }
